# mcp-hw

./: .gitignore  README.md  process_data.py  pyproject.toml
